# lab-log

./: .gitignore  .uvrc  INSTALL_NODE.md  README.md  README_VIDEO_LOG.md  UV_USAGE.md  WEB_UI_README.md  free_port_50001.sh  mvp_architecture_and_interface.md  pyproject.toml  requirements.txt  start.sh  stop.sh  问题分析.md
.uv/: config.toml
android-app-trial/: DEPLOYMENT.md  IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  README_TRIAL.md
android-camera/: README.md  settings.gradle.kts
api/: auth.py  dependencies.py  main.py
backend/: README.md  server.py
config/: database_config.py  encryption_config.py
context/: __init__.py  appearance_cache.py  event_context.py  prompt_builder.py
developer-frontend/: index.html
indexing/: __init__.py  chunker.py  chunking_strategies.py  embedding_service.py
log_writer/: __init__.py  encryption_service.py  writer.py
nginx/: README.md  lab-log.conf  setup.sh
orchestration/: __init__.py  pipeline.py
scripts/: add_is_indexed_column.sql  analyze_keyframes.py  check_user.py  clear_test_data.py  concat_videos.py  deploy_seekdb.sh  end_of_day.py  export_users.py  extract_segment_aligned.py  index_events.py  init_database.py  install_deps.sh  migrate_users_table.py  process_recording_session.py  process_video.py  test_segmentation.py  test_vector_search.py
segmentation/: __init__.py  segmenter.py
storage/: __init__.py  models.py  schema.sql  seekdb_client.py
streaming_server/: __init__.py  h264_parser.py  monitoring.py  server.py  test_qr_server.py
utils/: segment_time_parser.py
video_processing/: __init__.py  (+7 more)
(+137 files in other folders)
